removed overflow: hidden from .navbar because it hid the dropdown menus. So wrap around is still an issue.

--- a/inst/App/www/customDMDM.css
+++ b/inst/App/www/customDMDM.css
@@ -37,7 +37,6 @@ This inherits from the default bootstrap style
   opacity: 0.5;
 }
 .navbar {
-  overflow: hidden;
   color: #BBBBBB;
   border-color: black;
   font-weight: bold;
